# hotels-recommender-system-main

backend/: .gitignore  commands.txt  logfile  pyproject.toml  setup.py
backend/cleaner/: hotel_cleaner.py  review_cleaner.py  user_cleaner.py
backend/cleaner/csv/input/: hotel_data_twitter.csv  hotel_info_twitter.csv  hotel_review_twitter.csv
backend/cleaner/csv/output/: hotel_twitter.csv  (+2 more)
backend/core/: amenities_generator.py  amenities_tripadvisor.py  hotel_reviews_paris.csv  hotel_reviews_paris_amenities.csv  settings.py  tables_generator.py  urls.py
backend/csv/: amenities_data.csv  hotel_reviews_all_destinations.csv  hotels_data_index.csv  hotels_data_with_amenities.csv  reviews_data.csv
backend/csv/generator/: amenities_generator.py  amenities_tripadvisor.py  city_generator.py  csv_generator.py  hotels_generator.py  reviews_generator.py
backend/csv/input/: amenities_data_index.csv  city_data_index.csv  hotels_data.csv  reviews_data_index.csv
backend/hotels/: admin.py  apps.py  models copy.py  models.py  serializers.py  serializers_fields.py  urls.py  views.py
backend/recommender/offline/: hotel_similarity_calculator_by_amenities.py  hotel_similarity_calculator_by_amenities_test.py  item_similarity_calculator.py  item_similarity_calculator_test.py
backend/recommender/online/: neighborhood_based_hotel_recommender.py  neighborhood_based_recommender.py  popularity_recommender copy.py  popularity_recommender.py
backend/tests/integration/: test_login.py  test_signup.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+152 files in other folders)
